[package]
name = "xmz_client_server"
version = "0.1.0"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]

[[bin]]
name = "client"
path = "src/client-bin.rs"

[[bin]]
name = "server"
path = "src/server-bin.rs"

[dependencies]
xmz_shift_register = { git = "https://github.com/zzeroo/xmz_shift_register.git" }
unix_socket = "0.5.0"
tempdir = "0.3.4"
clap = "*"
