[package]
name = "xmz_client_server"
version = "0.1.0"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "xMZ-Mod-Touch Client Server Binaries"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Client-Server.git"
license = "GPL-3.0"

[[bin]]
name = "client"
path = "src/client-bin.rs"

[[bin]]
name = "server"
path = "src/server-bin.rs"

[lib]
name = "server_command"
path = "src/server_command.rs"

[dependencies]
xmz_shift_register = { git = "https://github.com/zzeroo/xmz_shift_register.git" }
unix_socket = "0.5.0"
nanomsg = "*"
tempdir = "0.3.4"
clap = "*"
term = "*"
